--- a/style.css
+++ b/style.css
@@ -1,17 +1,51 @@
-body {
-    background-color: white;
+:root {
+    --tamanho-cabecalho: 5vh;
+    --tamanho-corpo: 85vh;
+    --tamanho-rodape: 10vh;
 }
 
-ul {
-    list-style-type: none;
-    margin: -6px;
+body {
+    background-color: white;
+    margin: 0;
     padding: 0;
 }
 
+.cabecalho {
+    display: block;
+    width: 100%;
+    height: var(--tamanho-cabecalho);
+}
+
+.corpo {
+    background-color: rgb(219, 45, 45);
+    display: block;
+    width: 100%;
+    height: var(--tamanho-corpo);
+}
+
+.rodape {
+    width: 100%;
+    display: block;
+    background-color: blue;
+    height: var(--tamanho-rodape);
+}
+
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0;
+    font-size: 0;
+}
+
 li {
-    float: left;
     background-color: rgba(37, 198, 209, 0.397);
-    width: calc(25%);
+    width: 25%;
+    display: inline-block;
+    font-size: 16px; 
 }
 
 li a {
@@ -19,7 +53,8 @@ li a {
     text-align: center;
     display: block;
     text-decoration: none;
-    line-height: 50px;
+    line-height: var(--tamanho-cabecalho);
+    height: var(--tamanho-cabecalho);
 }
 
 li a:hover {
@@ -28,4 +63,5 @@ li a:hover {
 
 li .selecionado {
     background-color: rgba(37, 198, 209, 0.863);;
-}
+} 
+
