--- a/style.css
+++ b/style.css
@@ -10,26 +10,24 @@ body {
 }
 
 .cabecalho {
+    height: var(--tamanho-cabecalho);
     display: block;
     width: 100%;
-    height: var(--tamanho-cabecalho);
 }
 
 .corpo {
-    background-color: rgba(122, 86, 86, 0.406);
-    display: block;
-    width: 90vw;
-    padding: 5vh;
     height: var(--tamanho-corpo);
+    width: 100%;
+    background-color: rgba(122, 86, 86, 0.406);
+    display: block;    
 }
 
 .rodape {
+    height: var(--tamanho-rodape);
     width: 100%;
     display: block;
     background-color: rgba(0, 0, 255, 0.214);
-    height: var(--tamanho-rodape);
 }
-
 
 ul {
     list-style-type: none;
@@ -65,4 +63,10 @@ li a:hover {
     font-size: 20px;
     background-color: rgba(37, 198, 209, 0.863);;
 } 
+
+.corpo p {
+    margin: 0;
+    padding: 50px 10px 10px 100px;
+}
+
 
