--- a/style.css
+++ b/style.css
@@ -17,9 +17,12 @@ body {
 
 .corpo {
     height: var(--tamanho-corpo);
-    width: 100%;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
     background-color: rgba(122, 86, 86, 0.406);
-    display: block;    
+    display: block;
+    border-radius: 100px;
 }
 
 .rodape {
@@ -27,6 +30,11 @@ body {
     width: 100%;
     display: block;
     background-color: rgba(0, 0, 255, 0.214);
+    text-align: center;
+}
+
+.corpo .conteudo {
+    padding-top: 5%;
     text-align: center;
 }
 
@@ -44,7 +52,7 @@ li {
     background-color: rgba(37, 198, 209, 0.397);
     width: 25%;
     display: inline-block;
-    font-size: 16px; 
+    font-size: 16px;
 }
 
 li a {
@@ -62,25 +70,14 @@ li a:hover {
 
 .selecionado {
     font-size: 20px;
-    background-color: rgba(37, 198, 209, 0.863);;
-} 
-
-.corpo p {
-    margin: 0;
-    padding: 50px 10px 10px 100px;
+    background-color: rgba(37, 198, 209, 0.863);
 }
 
 .corpo dt {
-    padding-left: 200px;
-    font-size: 22px;
+    font-size: 25px;
 }
 
-.corpo dd {
-    padding-left: 220px;
+.corpo img {
+    width: 50px;
+    height: 50px;
 }
-
-.corpo ul {
-    color: red;
-}
-
-
