--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@ body {
     height: var(--tamanho-rodape);
     width: 100%;
     display: block;
-    background-color: rgba(0, 0, 255, 0.214);
+    background-color: rgb(0, 0, 0);
     text-align: center;
+    color: rgba(255, 255, 255, 0.611);
 }
 
 .corpo .conteudo {
@@ -54,7 +55,7 @@ li {
     background-color: rgb(218, 146, 146);
     width: 23%;
     display: inline-block;
-    font-size: 16px;
+    font-size: medium;
     border-radius: 500px;
     margin-left: 1%;
     margin-right: 1%;
